Fixed cart sticky on safari

--- a/src/assets/styles/core/layout.scss
+++ b/src/assets/styles/core/layout.scss
@@ -15,7 +15,7 @@ html {
 }
 
 body.fixed-scroll {
-  position: absolute;
+  position: fixed;
   overflow: hidden;
   width: 100%;
 }
