--- a/src/assets/styles/snippets/cart-modal.scss
+++ b/src/assets/styles/snippets/cart-modal.scss
@@ -55,6 +55,9 @@
 
   .cart-modal-close {
     cursor: pointer;
+    position: absolute;
+    right: 15px;
+    top: 24px;
     .icon {
       font-size: 14px;
     }
