--- a/src/assets/styles/snippets/product-tile.scss
+++ b/src/assets/styles/snippets/product-tile.scss
@@ -25,20 +25,29 @@
   }
 
   .yotpo {
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    display: flex;
-    justify-content: center;
-    margin-top: 0;
-    margin-bottom: 10px;
-    line-height: 14px;
 
     @include breakpoint(small down) {
+      display: flex;
       flex-direction: column;
       align-items: center;
-
     }
+
+    .yotpo-bottomline {
+      text-align: center;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      display: flex;
+      justify-content: center;
+      margin-top: 0;
+      margin-bottom: 10px;
+      line-height: 14px;
+
+      @include breakpoint(small down) {
+        flex-direction: column;
+        align-items: center;
+      }
+    }
+
 
     .yotpo-stars {
       //display: none;
